EXP-3 Sort expressions attribute groups by smallest first.